--- a/odonto/templates/records/covid_status.html
+++ b/odonto/templates/records/covid_status.html
@@ -2,11 +2,11 @@
 <div class="row">
   <div class="col-md-6">
     <table class="table table-striped">
-        {% table_row_field_display "CovidStatus.shielding_patient" %}
-        {% table_row_field_display "CovidStatus.increased_risk" %}
-        {% table_row_field_display "CovidStatus.possible_covid" %}
-        {% table_row_field_display "CovidStatus.symptom_free" %}
-        {% table_row_field_display "CovidStatus.other_covid_status" %}
+      {% covid_status_row_display "shielding_patient" %}
+      {% covid_status_row_display "increased_risk" %}
+      {% covid_status_row_display "possible_covid" %}
+      {% covid_status_row_display "symptom_free" %}
+      {% covid_status_row_display "other_covid_status" %}
     </table>
   </div>
 </div>
