Changes all references of Covid/covid to COVID-19 as this is the nomenclature used on all the Compass documentation

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -1,7 +1,7 @@
 {% load forms %}
 {% load odonto_forms %}
 <div class="row">
-  <h2>Covid triage</h2>
+  <h2>COVID-19 triage</h2>
 </div>
 <div class="row">
   <div class="col-md-5">
