--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -24,13 +24,13 @@
     {% checkbox field="CovidTriage.data_care_professional" style="vertical" %}
     {% checkbox field="CovidTriage.advised_analgesics" style="vertical" %}
     {% checkbox field="CovidTriage.follow_up_call_required" style="vertical" %}
-    {% checkbox label="Referred to local UDC" model="local.referred" style="vertical" change="editing.covid_triage.referrered_to_local_udc_reason=''" %}
+    {% checkbox label="Referred to local urgent dental care centre" model="local.referred" style="vertical" change="editing.covid_triage.referrered_to_local_udc_reason=''" %}
     <div class="row" ng-if="local.referred">
       <div class="col-md-12">
         {% odonto_select "ng-required='local.referred'" field="CovidTriage.referrered_to_local_udc_reason" style="vertical" %}
       </div>
       <div ng-show="form.$submitted && local.referred && !editing.covid_triage.referrered_to_local_udc_reason" class="col-md-12 help-block">
-        A reason is required when the patient is referred to the local UDC
+        A reason is required when the patient is referred to the local urgent dental care centre
       </div>
     </div>
   </div>
