Adds in the pathways for the covid triage form

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -8,7 +8,7 @@
     {% datepicker field="CovidTriage.date_of_contact" style="vertical" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% timefield field="CovidTriage.time_of_contact" %}
+    {% timefield field="CovidTriage.time_of_contact" model="local.time_of_contact" %}
   </div>
 </div>
 <div class="row">
