Adds in the basic validators for the covid triage, another validator that makes sure episodes don't overlap is still required
Adds in the summary view part of the pathways save step

Adds in the basic validation to make sure the required fields of the covid triage are required

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -5,10 +5,10 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% datepicker field="CovidTriage.date_of_contact" style="vertical" %}
+    {% odonto_datepicker field="CovidTriage.date_of_contact" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% timefield field="CovidTriage.time_of_contact" model="local.time_of_contact" %}
+    {% timefield field="CovidTriage.time_of_contact" %}
   </div>
 </div>
 <div class="row">
