Rename data care professional to the correct dental care professional

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -21,7 +21,7 @@
 </div>
 <div class="row">
   <div class="col-md-4">
-    {% checkbox field="CovidTriage.data_care_professional" style="vertical" %}
+    {% checkbox field="CovidTriage.dental_care_professional" style="vertical" %}
     {% checkbox field="CovidTriage.advised_analgesics" style="vertical" %}
     {% checkbox field="CovidTriage.follow_up_call_required" style="vertical" %}
     {% checkbox label="Referred to local urgent dental care centre" model="local.referred" style="vertical" change="editing.covid_triage.referrered_to_local_udc_reason=''" %}
