Change the time to always be stored on the editing variable in a format that the server understands, this means that we know what we can display in the summary, otherwise the variable is sometimes a date and sometimes a string when we're displaying it in the summary. We need the validate to be on the pathway as we're now using an ng-change which does not trigger watch, so we need to trigger it manually

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -11,7 +11,7 @@
     {% odonto_datepicker field="CovidTriage.date_of_contact" %}
   </div>
   <div class="col-md-3 col-md-offset-1">
-    {% timefield field="CovidTriage.time_of_contact" %}
+    {% timefield field="CovidTriage.time_of_contact" model="local.time_of_contact" change="timeChange()" %}
   </div>
 </div>
 <div class="row">
