Adds in a view and wiring that allows a person to delete an episode provided it is not submitted. This is because it is something they have asked for, but in this case for the moment we will only use it for the covid triage view

--- a/odonto/templates/covid_triage_explanation.html
+++ b/odonto/templates/covid_triage_explanation.html
@@ -5,7 +5,7 @@
         Please note triage Submissions are not required if the patient has a
         face to face appointment within the practice as a direct result of the triage carried out.
       </p>
-      <button class="btn btn-lg btn-primary btn-save">Cancel this claim</button>
+      <button ng-click="delete()" class="btn btn-lg btn-primary btn-save">Cancel this claim</button>
     </div>
   </div>
 </div>
