--- a/odonto/templates/covid_triage_explanation.html
+++ b/odonto/templates/covid_triage_explanation.html
@@ -2,8 +2,9 @@
   <div class="row">
     <div class="col-md-10">
       <p class="lead">
-        Please note triage Submissions are not required if the patient has a
-        face to face appointment within the practice as a direct result of the triage carried out.
+        Please note triage submissions are not required if the patient has a
+        face to face appointment within the practice as a direct result of the
+        triage carried out.
       </p>
       <button ng-click="delete()" class="btn btn-lg btn-primary btn-save">Cancel this claim</button>
     </div>
