--- a/odonto/templates/records/covid_triage.html
+++ b/odonto/templates/records/covid_triage.html
@@ -3,8 +3,7 @@
   <div class="col-md-6">
     <table class="table table-striped">
       {% table_row_field_display "CovidTriage.triage_type" %}
-      {% table_row_field_display "CovidTriage.date_of_contact" %}
-      {% table_row_field_display "CovidTriage.time_of_contact" %}
+      {% table_row_field_display "CovidTriage.datetime_of_contact" %}
       {% table_row_field_display "CovidTriage.dental_care_professional" %}
       {% table_row_field_display "CovidTriage.primary_reason" %}
       {% table_row_field_display "CovidTriage.covid_status" %}
