--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -7,8 +7,8 @@
   <div class="col-md-3">
     {% btn_radio field="CovidTriage.triage_type" %}
   </div>
-  <div class="col-md-6 col-md-offset-1">
-    {% datetimepicker field="CovidTriage.datetime_of_contact" %}
+  <div class="col-md-6 ">
+    {% odonto_datetimepicker field="CovidTriage.datetime_of_contact" style="vertical" %}
   </div>
 </div>
 <div class="row">
