Improve the label of the datetime field on covid triage

--- a/odonto/templates/forms/covid_triage_form.html
+++ b/odonto/templates/forms/covid_triage_form.html
@@ -8,7 +8,7 @@
     {% btn_radio field="CovidTriage.triage_type" %}
   </div>
   <div class="col-md-6 ">
-    {% odonto_datetimepicker field="CovidTriage.datetime_of_contact" style="vertical" %}
+    {% odonto_datetimepicker label="Date/time of contact" field="CovidTriage.datetime_of_contact" style="vertical" %}
   </div>
 </div>
 <div class="row">
